# voms

./: .classpath  .cvsignore  .devcontainer.json  .gitignore  AUTHORS  ChangeLog  INSTALL  Jenkinsfile  Makefile.am  Makefile.in  README.md  _config.yml  about.md  aclocal.m4  adapt-clients.sh  adapt-devel.sh  adapt-javadoc.sh  adapt-server.sh  adapt-voms.sh  adapt-vomsjapi.sh  autogen.sh  build.xml  configure  configure.ac  do-configure.sh  docker-compose.yml  documentation.md  download.md  index.md  log4j.properties  make-redhat.sh  news.md  openssl11.md  releases.md  run-jekyll.sh  support.md  voms-clients.spec  voms-devel.spec  voms-javadoc.spec  voms-server.spec  (+2 more)
doc/: .gitignore  AC-RFC.tex  Makefile.am  Makefile.in  RELEASE-NOTES.1-6-15  RELEASE-NOTES.1-7-0  authors.sgml  bugzilla.sgml  c++api.tex  capi.tex  certificate.txt  edg-voms-proxy-destroy.sgml  edg-voms-proxy-fake.sgml  edg-voms-proxy-info.sgml  edg-voms-proxy-init.sgml  edg-voms-proxy-list.sgml  edg-voms.sgml  license.sgml  links.sgml  manpage.refs  software.tex  testvoms.1  testvoms.sgml  testvoms.xml  voms-install-replica.8  voms-install-replica.xml  voms-proxy-destroy.1  voms-proxy-destroy.sgml  voms-proxy-destroy.xml  voms-proxy-fake.1  voms-proxy-fake.sgml  voms-proxy-fake.xml  voms-proxy-info.1  voms-proxy-info.sgml  voms-proxy-info.xml  voms-proxy-init.1  voms-proxy-init.sgml  voms-proxy-init.xml  voms-proxy-list.1  voms-proxy-list.sgml  (+6 more)
src/: .gitignore  Makefile.am  Makefile.in
src/ac/: Makefile.am  Makefile.in  acerrors.h  attributes.c  attributes.h  ccinit.cc  create.cc  error.c  extensions.c  extensions.h  init.c  init.h  mystack.c  newformat.c  test.c  validate.c  validate.cc  write.c  write.h
src/api/: Makefile.am  Makefile.in
src/api/ccapi/: Makefile.am  Makefile.in  api_util.cc  api_util.h  ccval.cc  ccval.h  cinterface.cc  cinterface.h  ctest.c  internal.cc  internal.h  jni-int.cc  jni-int.h  realdata.h  test.cc  voms-1.0.pc.in  voms-2.0.pc.in  voms_api.cc  voms_api.h  voms_api_nog.h  voms_apic.h  voms_apic_nog.h
src/api/java/: Makefile.am  Makefile.in  Manifest.add  log4j.properties
src/api/java/org/glite/security/voms/: Attribute.java  AttributeList.java  BasicVOMSTrustStore.java  FQAN.java  LSCFile.java  PKIStore.java  PKIUtils.java  PKIVerifier.java  SigningPolicy.java  VOMSAttribute.java  VOMSValidator.java
src/api/java/org/glite/voms/: BasicVOMSTrustStore.java  DirectoryList.java  FQAN.java  FileCertReader.java  FileEndingIterator.java  LSCFile.java  Namespace.java  PKIStore.java  PKIStoreFactory.java  PKIUtils.java  PKIVerifier.java  SigningPolicy.java  VOMSAttribute.java  VOMSKeyManager.java  VOMSTrustManager.java  VOMSValidator.java
src/api/java/org/glite/voms/ac/: ACCerts.java  ACGenerator.java  ACTarget.java  ACTargets.java  ACTrustStore.java  (+13 more)
src/autogen/: config.h.in
src/client/: Makefile.am  Makefile.in  contact.hpp  fqan.cc  fqan.h  main.cc  vomsclient.cc  vomsclient.h
src/common/: Makefile.am  Makefile.in  credentials.c  data.cc  doio.c  error.c  failure.c  fqan.cc  list.c  normalize.c  options.cc  pass.cc  sign.cc  xml.c  xmlcc.cc
src/include/: Client.h  Makefile.am  Makefile.in  Server.h  acstack.h  ccac.h  ccwrite.h  config.h.in  credentials.h  data.h  dbwrap.h  doio.h  errors.h  errortype.h  format.h  fqan.h  getopts.h  globus_oldgaa.h  globus_oldgaa_utils.h  gssapi_compat.h  init.h  listfunc.h  log.h  myproxycertinfo.h  newca.h  newformat.h  normalize.h  options.h  pass.h  proxycertinfo.h  proxypolicy.h  replace.h  sign.h  ssl_compat.h  sslutils.h  streamers.h  tokens.h  validate.h  vomsxml.h  xml.h
src/install/: Makefile.am  Makefile.in  mysql2oracle.in  sysconfig-voms  sysconfig-voms.in  upgrade1to2.in  voms-ping  voms.csh.in  voms.data  voms.sh.in  voms.start.in  voms_install_db.in  vomses.template
src/log/: Makefile.am  Makefile.in  fns.c  fs.c  log.c  sl.c  streamers.h
src/replib/: Makefile.am  Makefile.in  daemon.c  dummy.c  getopt_long.c  getopt_long_only.c  memcmp.c  memset.c  setenv.c  strndup.c
src/replica/: Makefile.am  Makefile.in  voms_install_replica.in  voms_replica_master_setup.sh  voms_replica_slave_setup.sh
src/server/: Makefile.am  Makefile.in  VOMSAC.wsdl  VOMSServer.h  access_db_sql.cc  access_db_sql.h  attribute.cc  attribute.h  main.cc  soapC.c  soapH.h  soapServer.c  soapStub.h  soapdefs.h  stdsoap2.c  stdsoap2.h  uuid.c  uuid.h  vomsSOAP.nsmap  vomsd-rest.cc  vomsd.cc
src/socklib/: Client.cpp  Makefile.am  Makefile.in  Server.cpp  globus_oldgaa.h  globus_oldgaa_utils.h  globuswrap.c  globuswrap.h  io.cc  io.h  ipv6sock.c  ipv6sock.cc  ipv6sock.h  tokens.c  vomsssl.h
src/sslutils/: Makefile.am  Makefile.in  evaluate.c  lex.namespaces.c  lex.signing.c  lexparse.h  myproxycertinfo.c  namespaces.c  namespaces.h  namespaces.l  namespaces.y  parsertypes.h  proxy.c  proxy.h  proxycertinfo.c  proxypolicy.c  scutils.c  scutils.h  signing_policy.c  signing_policy.h  signing_policy.l  signing_policy.y  ssl_compat.c  sslutils.c  sslutils.h  voms_cert_type.c  voms_cert_type.h  vomsproxy.h
src/sslutils/oldgaa/: Makefile.am  Makefile.in  globus_oldgaa.h  globus_oldgaa_utils.c  globus_oldgaa_utils.h  oldgaa_alloc.c  oldgaa_api.c  oldgaa_gl_internal_err.c  oldgaa_gl_internal_err.h  oldgaa_policy_evaluator.c  oldgaa_policy_evaluator.h  oldgaa_release.c  oldgaa_utils.c  oldgaa_utils.h  rfc1779.c
src/support/: Makefile.am  Makefile.in  test_clean.in  test_setup.in  test_start.in  testvoms.in
src/utils/: Makefile.am  Makefile.in  lex.yy.c  lexparse.h  parsertypes.h  voms_proxy_destroy.cc  voms_proxy_info.cc  voms_verify.cc  vomsfake.cc  vomsfake.h  vomsfake.y  vomsparser.c  vomsparser.h  vomsparser.l
test/utest/: Makefile.am  Makefile.in  ca.pem  capi_cu_Main.cpp  capi_cu_main.cpp  capi_cu_suite.cpp  capi_cu_suite.h  csocket_mock.c  holder.pem  issuer.pem  key.pem  socket_mock.cpp  voms_cu_main.cpp  voms_cu_suite.cpp  voms_cu_suite.h  vomsclient_cu_main.cpp  vomsclient_cu_suite.cpp  vomsclient_cu_suite.h  vomsdata_cu_main.cpp  vomsdata_cu_suite.cpp  vomsdata_cu_suite.h  vomsdatac_cu_suite.cpp  vomsdatac_cu_suite.h  vomses  x509up_u501
(+634 files in other folders)
